# py-kis

./: .env.example  .gitignore  01-PRD.md  02-ARCHITECTURE.md  03-API-SPECIFICATION.md  04-IMPLEMENTATION-GUIDE.md  05-KIS-API-REFERENCE.md  README.md  example.py  pyproject.toml  samsung_daily_ohlcv.csv  samsung_minute_ohlcv.csv
.agent/: rules.md
examples/: async_usage.py  basic_usage.py  realtime_test.py
scripts/: fetch_samsung_minute.py  fetch_samsung_ohlcv.py  verify_minute_ohlcv.py
src/pykis/: __init__.py  async_client.py  client.py  constants.py  exceptions.py
src/pykis/api/: __init__.py  account.py  async_account.py  async_order.py  async_quote.py  order.py  quote.py
src/pykis/auth/: __init__.py  async_manager.py  manager.py
src/pykis/models/: __init__.py  balance.py  ohlcv.py  order.py  orderbook.py  ticker.py
src/pykis/utils/: __init__.py  async_http.py  http.py
src/pykis/websocket/: __init__.py  client.py
tests/: conftest.py  test_account.py  test_async.py  test_auth.py  test_order.py  test_quote.py
